infra/rick/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-deployment
  labels:
    app: rick
spec:
  selector:
    matchLabels:
      app: rick
  template:
    metadata:
      labels:
        app: rick
    spec:
      containers:
        - name: rick
          image: ghcr.io/kofoednielsen/pass-rick:171 # {"$imagepolicy": "pass:rick"}
