infra/rick/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rick-service
spec:
  selector:
    app: rick
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
